# openclaw-windows-installer

./: .gitignore  GITHUB_ACTIONS_WORKFLOW.md  README.md
.github/workflows/: Build Windows Installer.yml  build.yml
bundled/: openclaw-config.json  start-openclaw.bat  stop-openclaw.bat
config-tool/: index.html  package.json  vite.config.js
config-tool/scripts/: build.js
config-tool/src-tauri/: Cargo.toml  tauri.conf.json
config-tool/src-tauri/src/: main.rs
installer/: setup.iss
scripts/: build.ps1  build.sh
